--- a/style/style.css
+++ b/style/style.css
@@ -1,107 +1,116 @@
 body {
-  width: 100vw;
-  height: 100vh;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background-color: orange;
-  display: flex;
-  flex-direction: column;
+  width: 100vw;
+  height: -moz-fit-content;
+  height: fit-content;
+  font-family: sans-serif monospace;
 }
-body header {
+body .header {
   background-color: red;
-  height: 5%;
-}
-body main {
-  height: -moz-fit-content;
-  height: fit-content;
-  background-color: greenyellow;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-body main .game {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-body main .game .title {
-  background-color: cadetblue;
-  width: 100%;
-  height: 10%;
-  text-align: center;
-}
-body main .game .info {
-  background-color: grey;
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 90%;
-}
-body main .game .info .left {
-  display: flex;
-  width: 50%;
-  height: 100%;
-  align-self: flex-start;
-  background-color: antiquewhite;
-  justify-content: center;
-  align-items: center;
-}
-body main .game .info .left .left-container {
-  background-color: aliceblue;
-  width: 90%;
-  height: 90%;
-  border-radius: 30px;
-  display: flex;
-  flex-direction: column;
-}
-body main .game .info .left .left-container .text {
-  height: 90%;
-  border-radius: 30px 30px 0px 0px;
-  background-color: coral;
-}
-body main .game .info .left .left-container .github-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10%;
-}
-body main .game .info .left .left-container .github-btn a {
-  height: 100%;
-  width: 100%;
+  height: 50px;
   display: flex;
   flex-direction: row;
   align-content: center;
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+}
+body .header a {
+  display: flex;
+  align-items: center;
+  align-content: center;
   text-align: center;
-  background-color: aqua;
-  border-radius: 0px 0px 30px 30px;
+  background-color: red;
+  padding-inline: 40px;
   text-decoration: none;
 }
-body main .game .info .left .left-container .github-btn a svg {
-  height: 100%;
-}
-body main .game .info .right {
-  display: flex;
-  width: 50%;
+body .header a:hover {
   background-color: brown;
-  align-self: flex-end;
+}
+body main {
+  background-color: aquamarine;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+body main .about {
+  display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-}
-body main .game .info .right .right-container {
-  background-color: red;
-  width: 100%;
-}
-body main .game .info .right .right-container img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  background-color: brown;
 }
-body footer {
+body main .year {
+  background-color: beige;
+  width: 90%;
+}
+body main .year .year-title {
+  color: blue;
+  text-align: center;
+}
+body main .year .game {
+  background-color: coral;
+  display: flex;
+  flex-direction: column;
+}
+body main .year .game .game-title {
+  color: blueviolet;
+  background-color: cornflowerblue;
+}
+body main .year .game .game-content {
+  display: flex;
+  flex-direction: row;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+body main .year .game .game-content .left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  background-color: aqua;
+}
+body main .year .game .game-content .left .left-content {
+  width: 90%;
+  height: 100%;
+  background-color: darkcyan;
+}
+body main .year .game .game-content .left .left-content img {
+  height: 100%;
+}
+body main .year .game .game-content .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  background-color: azure;
+}
+body main .year .game .game-content .right .right-content {
+  width: 90%;
+  background-color: goldenrod;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+body main .year .game .game-content .right .right-content .game-info {
+  height: 95%;
+}
+body main .year .game .game-content .right .right-content .github-button {
   height: 5%;
-  background-color: blueviolet;
+  background-color: aliceblue;
+}
+body main .year .game .game-content .right .right-content .github-button a {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
+  text-decoration: none;
+}
+body main .year .game .game-content .right .right-content .github-button a svg {
+  height: 100%;
 }/*# sourceMappingURL=style.css.map */
