--- a/style/style.scss
+++ b/style/style.scss
@@ -1,119 +1,133 @@
 body {
-    width: 100vw;
-    height: 100vh;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: orange;
-    display: flex;
-    flex-direction: column;
+    width: 100vw;
+    height: fit-content;
+    font-family: sans-serif monospace;
 
-    header {
+    .header {
         background-color: red;
-        height: 5%;
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        position: sticky;
+        top: 0;
+        overflow: hidden;
+
+        a {
+            display: flex;
+            align-items: center;
+            align-content: center;
+            text-align: center;
+            background-color: red;
+            padding-inline: 40px;
+            text-decoration: none;
+
+            &:hover {
+                
+            background-color: brown;
+            }
+        }
     }
 
     main {
-        height: fit-content;
-        background-color: greenyellow;
-        width: 100%;
+        background-color: aquamarine;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        height: fit-content;
 
-        .game {
+        .about {
             display: flex;
-            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             width: 100%;
-            height: fit-content;
+            height: 100%;
+            background-color: brown;
+        }
 
-            .title {
-                background-color: cadetblue;
-                width: 100%;
-                height: 10%;
+        .year {
+            background-color: beige;
+            width: 90%;
+
+            .year-title {
+                color: blue;
                 text-align: center;
             }
-            .info {
-                background-color: grey;
+
+            .game {
+                background-color: coral;
                 display: flex;
-                flex-direction: row;
-                width: 100%;
-                height: 90%;
+                flex-direction: column;
 
-                .left {
+                .game-title {
+                    color: blueviolet;
+                    background-color: cornflowerblue;
+                }
+
+                .game-content {
                     display: flex;
-                    width: 50%;
-                    height: 100%;
-                    align-self: flex-start;
-                    background-color: antiquewhite;
-                    justify-content: center;
-                    align-items: center;
+                    flex-direction: row;
+                    height: fit-content;
 
-                    .left-container {
-
-                        background-color: aliceblue;
-                        width: 90%;
-                        height: 90%;
-                        border-radius: 30px;
+                    .left {
                         display: flex;
-                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        width: 50%;
+                        background-color: aqua;
 
-                        .text {
-                            height: 90%;
-                            border-radius: 30px 30px 0px 0px;
-                            background-color: coral;
-                        }
+                        .left-content {
+                            width: 90%;
+                            height: 100%;
+                            background-color: darkcyan;
 
-                        .github-btn {
-                            
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            height: 10%;
-
-                            a {
+                            img {
                                 height: 100%;
-                                width: 100%;
-                                display: flex;
-                                flex-direction: row;
-                                align-content: center;
-                                text-align: center;
-                                background-color: aqua;
-                                border-radius: 0px 0px 30px 30px;
-                                text-decoration: none;
+                            }
+                        }
+                    }
 
-                                svg {
+                    .right {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 50%;
+                        background-color: azure;
+
+                        .right-content {
+                            width: 90%;
+                            background-color: goldenrod;
+                            display: flex;
+                            flex-direction: column;
+                            height: 100%;
+
+                            .game-info {
+                                height: 95%;
+                            }
+
+                            .github-button {
+                                height: 5%;
+                                background-color: aliceblue;
+
+                                a {
+                                    display: flex;
+                                    flex-direction: row;
                                     height: 100%;
+                                    align-items: center;
+                                    text-decoration: none;
+
+                                    svg {
+                                        height: 100%;
+                                    }
                                 }
                             }
                         }
                     }
                 }
-
-                .right {
-                    display: flex;
-                    width: 50%;
-                    background-color: brown;
-                    align-self: flex-end;
-                    justify-content: center;
-                    align-items: center;
-                    height: 100%;
-                    
-                    .right-container {
-                        background-color: red;
-                        width: 100%;
-                        img {
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
-                    }
-                }
             }
         }
-    }
-
-    footer {
-        height: 5%;
-        background-color: blueviolet;
     }
 }
